Wed Dec 14 11:04:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: fix core and CS_NULLTERM

Mon Dec 12 17:09:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: more verbose
	* src/tds/mem.c: additional check for params

Sun Dec 11 10:58:03 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: small fixes

Sat Dec 10 18:13:13 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds_ssl.html: small update

Fri Dec 09 19:02:28 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- add TDS_TOKEN_RES_MSG results to tds_process_tokens

Fri Dec  9 12:05:37 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c accept -d as database option
	* src/apps/tsql.c require 'go' to appear at start of command line

Fri Dec 09 17:57:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: document --with-openssl

Fri Dec 09 15:21:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove warning using gcc4

Fri Dec 09 15:04:23 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: fix OpenSSL detection

Wed Dec 07 17:12:11 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/raiserror.c: more strong tests

Wed Dec 07 13:54:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* samples/odbc_rpc.pl: remove some warnings
	* src/odbc/unittests/raiserror.c: updated with odbc 3 check

Tue Dec 06 21:24:58 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/dblib/bcp.c: support for large file in bcp

Tue Dec 06 14:09:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html doc/tds_ssl.html: now valid html pages

Tue Dec 06 11:47:33 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c: TDSPORT can be a services port

Mon Dec 05 22:34:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>